manifest/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerfulfamily-deployment
  labels:
    app: powerfulfamily-blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: powerfulfamily-blog
  template:
    metadata:
      labels:
        app: powerfulfamily-blog
    spec:
      containers:
      - name: powerfulfamily-blog
        image: ghcr.io/masebb/powerfulfamily.net:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: powerfulfamily-blog
spec:
  ipFamilyPolicy: RequireDualStack
  selector:
    app: powerfulfamily-blog
  ports:
    - name: http
      port: 80
      targetPort: 80
