manifest/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: powerfulfamily-ingress
  annotations:
    cert-manager.io/issuer: "selfsigning-issuer"
spec:
  ingressClassName: powerfulfamily-nginx
  tls:
    - hosts:
      - powerfulfamily.net
      - www.powerfulfamily.net
      secretName: letsencrypt-prod-powerfulfamily-blog
  rules:
    - host: powerfulfamily.net
      http:
        paths:
          - backend:
              service:
                name: powerfulfamily-blog
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.powerfulfamily.net
      http:
        paths:
          - backend:
              service:
                name: powerfulfamily-blog
                port:
                  number: 80
            path: /
            pathType: Prefix
